# newsache

./: .gitignore  README.md  docker-compose.yaml  main.py  playground.ipynb  pyproject.toml  sources.yaml
src/news_pipeline/: assets.py  db.py  definitions.py  resources.py  utils.py
src/news_pipeline/api/: dependencies.py  main.py  repositories.py  schemas.py
